# deduce

./: Makefile  README.md  pyproject.toml  tox.ini
cpp/: Makefile  jf_bit_counts  jf_bit_counts.cc
data/bej04/: uces-filtered.watson.fa  uces.watson.fa
data/christley/: chloroplast.fa
deduce_uces/: Genome.py  Logger.py  __init__.py  cli.py  filenames.py  main.py  run.py  types.py  utils.py
deduce_uces/algs/: find_syntenic_blocks.py  indexed_seq.py  merge_doa.py  name_mapping.py  uce_params.py
deduce_uces/commands/: gen_syntenic_blocks.py  gen_synteny_map.py  measure_assembly_blocks.py  measure_assembly_completeness.py  measure_assembly_contiguity.py  measure_assembly_pairs.py  validate.py
deduce_uces/ext/: bedtools.py  jellyfish.py  samtools.py
deduce_uces/io/: bed.py  checkpoint.py  fasta.py  output.py  sam.py
docs/: UserGuide.md
notebooks/: AllDedUCEMetrics.ipynb  Analysis synteny.ipynb  Assembly Data.ipynb  BlockAnalysis.ipynb  CNSs.ipynb  Completeness.ipynb  Consensus Synteny.ipynb  Conserved Synteny.ipynb  Data-oriented merge.ipynb  Filtering CKs.ipynb  Generalised Syntenic Blocks.ipynb  Inexact homology.ipynb  Merging.ipynb  PairAnalysis.ipynb  Pairs.ipynb  Performance.ipynb  Phylo.ipynb  Replication.ipynb  TraverseBlocks.ipynb  UCE definition.ipynb  Untitled.ipynb  Untitled1.ipynb  constants.py
scripts/: compare_sam.py  filter_sam.py  fix-bed-indexing.py  run_merge.py  uce_definition.py  validate_deduce_candidates.py  validate_deduce_uces.py
tests/: conftest.py  test_find.py  test_generate_contig_sequences.py  test_merge_doa.py
(+41 files in other folders)
